# cli

./: .dockerignore  .env  .env.example  .gitignore  .pypirc  MANIFEST.in  README.md  asdasd  build.sh  dockerfile  pyproject.toml  setup.py  test.py
orgm/: .env.example  __main__.py  cli.py  comandos.md  orgm.py
orgm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
orgm/adm/: __init__.py  clientes.py  cotizaciones.py  db.py  firma.py  proyectos.py  servicios.py
orgm/apis/: divisa.py  pago.py  rnc.py
orgm/apps/: ai_app.py  clientes.py  cotizaciones.py  docker_cli.py  env_app.py  pago_app.py  pdf_app.py  proyectos.py  rnc_app.py
orgm/apps/adm/cliente/: gui.py  tipos.py
orgm/apps/dev/: upload.py
orgm/apps/utils/carpetas/: api.py  app.py  esquemas.py
orgm/apps/utils/docs/: menu.py
orgm/cache/: cliente.json  comandos.json  representantes.json  token.json
orgm/commands/: ai.py  base.py  divisa.py  editar.py  menu.py  pago.py
orgm/questionary/: __init__.py  clientes.py
orgm/server/: auth.py
orgm/stuff/: __init__.py  ai.py  build.sh  divisa.py  logman.py  spinner.py  update.bat  variables.py
orgm/temp/portada/: tpl_portada.docx
tests/: test_orgm.py
