[project]
name = "orgm"
version = "0.1"
description = "ORGM CLI"
readme = "README.md"
authors = [{name = "Osmar Garcia"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "click",
    "python-dotenv>=1.0.1",
    "questionary>=2.1.0",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "sqlmodel>=0.0.24",
    "textual>=0.73.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project.scripts]
orgm = "orgm.cli:cli"

[project.optional-dependencies]
test = ["pytest"]
