[project]
name = "orgm"
version = "0.11"
description = "ORGM CLI"
readme = "README.md"
authors = [{name = "Osmar Garcia"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "click",
    "httpx>=0.28.1",
    "kivy>=2.3.1",
    "plyer>=2.1.0",
    "pyperclip>=1.9.0",
    "python-dotenv>=1.0.1",
    "questionary>=2.1.0",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "setuptools>=75.3.2",
    "sqlmodel>=0.0.24",
    "textual>=0.73.0",
    "typer>=0.15.2",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project.scripts]
orgm = "orgm.orgm:main"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
orgm = ["*.md", "*.json", "*.txt", "*.html", "*.example", "*.css", "*.js", "data/*", "apis/*", "stuff/*", "adm/*", "apps/*", "*.sh", "*.bat"]

[tool.setuptools.package-dir]
"" = "."
